# OpenGL-

./: .gitignore  .gitmodules  CMakeLists.txt
resources/shaders/: c_bloom.glsl  quad.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  standard.frag  standard.vert
src/: AABB.h  Application.cpp  Application.h  Camera.cpp  Camera.h  ComputeShader.cpp  ComputeShader.h  Environment.h  IndexBuffer.cpp  IndexBuffer.h  Light.h  Material.cpp  Material.h  MaterialDefinition.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  PostProcessingEffect.cpp  PostProcessingEffect.h  Primitive.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h  Scene.cpp  Scene.h  SinglePassComputeEffect.cpp  SinglePassComputeEffect.h  SinglePassPostProcessingEffect.cpp  SinglePassPostProcessingEffect.h  SinglePassPostProcessingEffect.inl  Texture.cpp  Texture.h  Texture.inl  TextureAllocator.cpp  TextureAllocator.h  (+10 more)
src/UI/: CollapsedEntityComponent.cpp  CollapsedEntityComponent.h  LightComponent.cpp  LightComponent.h  MeshComponent.cpp  MeshComponent.h  RendererComponent.h  SceneComponent.cpp  SceneComponent.h  UI.cpp  UI.h
src/pipeline/: ForwardPipeline.cpp  ForwardPipeline.h  Pipeline.cpp  Pipeline.h  RenderPass.h
src/post-processing-effects/: HDRBloom.cpp  HDRBloom.h
src/postprocessing/: Blur.cpp  Blur.h  HDRBloom.cpp  HDRBloom.h  HDRToneMapping.h  PostProcessingEffects.h
src/scene/: CameraDescription.h  EnvironmentDescription.h  LightDescription.h  MaterialDescription.h  MeshDescription.h  SceneDescription.h
(+2 files in other folders)
